frontend/src/index.css
:root {
  font-family: 'Times New Roman', Times, serif;
  line-height: 1.5;
  font-weight: 400;

  /* color-scheme: light dark; */
  color-scheme: light;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  min-width: 120px;
  min-height: 100vh;

  div {
    display: flex;
  }

  #root {
    flex-direction: column;
    width: 100%;
  }

  footer {
    display: flex;
    justify-content: space-around;
    overflow: hidden;
    color: white;
    padding: 20px 0;

    .footer-item {
      display: flex;      
      justify-content: center;
      align-items: center;
      border-radius: 20px;
      appearance: none;
      margin: auto;
    }
    .footer-item input[type="radio"] {
      appearance: none;
      background-color: #0088cc;
    }
    .footer-item label {
      background-color: #0088cc;
      border-radius: 20px;
      text-align: center;
      padding: 10px 15px;
      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
      transition: background-color 0.3s;
      text-wrap: nowrap;
      text-decoration: dotted;
    }
    .footer-item input[type="radio"]:checked + label {
      background-color: #0262a7;
    }
  }

  header {
    display: flex;
    border-radius: 10px;
    flex-direction: column;
    background-color: #0088cc;
    height: fit-content;
    margin: 10px 10px 20px 10px;
    color: white;

    .balance-title {
      text-align: center;
    }

    .balance {
      text-align: center;
      margin-bottom: 0;
      margin-top: -10px;
    }
    .welcome {
      margin-top: 10px;
      align-self: center;
      font-size: medium;
    }
    .history {
      align-self: center;
      margin-bottom: 5px;
      color: rgba(255, 255, 255, 0.5);
    }
  }

  .list {
    overflow-y: auto;
    flex: 1 1 auto;
    height: 0px;
    flex-direction: column;
    border-radius: 10px;
    overflow-y: auto;
    margin: 0 10px;
    &.profile {
      -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
      box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
    }
    &.prize {
      gap: 20px;
    }
    .item {
      border-bottom: 2px solid #0088cc;
      padding: 10px;
      justify-content: space-between;
      .img-check {
        background-image: url(./assets/check.png);
        height: 20px;
        width: 20px;
        align-self: center;
        background-size: contain;
      }
    }
    
    .item-text {
      flex-direction: column;
      & p {
        margin: 0;
        font-weight: 600;
      }
      .point-text {
        color: rgba(0, 0, 0, 0.4);
      }
    }
    .channel {
      flex-direction: column;
      p {
        margin: 0 10px;
      }
    }
    .item.prize {
      border: solid 1px rgba(0, 0, 0, 0.2);
      background-color: #f0f0f0ac;
      border-radius: 20px;
      -webkit-box-shadow: 0px 0px 5px 0px rgba(255, 255, 255, 0.2);
      box-shadow: 0px 0px 5px 0px rgba(255, 255, 255, 0.2);
      padding: 10px;

      .prize-img {
        height: 70px;
        width: 70px;
        object-fit: cover;
        border-radius: 50%;
        align-self: center;
      }
      .description {
        flex-direction: column;
        flex: 1;
        margin-left: 20px;

        p {
          margin: 0;
        }
        p.description {
          font-size: 16px;
        }
        p.cost {
          font-size: 14px;
          color: #a7a7a7;
        }
      }
    }
    button {
      margin: 10px 0 5px 0;
      border-radius: 20px;
      background-color: #0088cc;
    }
  }
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

/* @media (prefers-color-scheme: dark) {
  .list.profile {
    -webkit-box-shadow: 0px 0px 5px 0px rgba(255, 255, 255, 0.2) !important;
    box-shadow: 0px 0px 5px 0px rgba(255, 255, 255, 0.2) !important;
    .point-text {
      color: rgba(255, 255, 255, 0.3) !important;
    }
  }
  .list.prize {
    .item.prize {
      border: solid 1px rgba(255, 255, 255, 0.2) !important;
      background-color: #f0f0f033;
      button {
        color: white;
      }
    }
  }
} */

